# cmake_test_library

./: .gitignore  CMakeLists.txt  compile.bat  sysma.pc.in
src/: database.cpp  database.h  storage.cpp  storage.h  sysma.cpp  sysma.h  uuid.cpp
src/storage/: item.cpp  item.h  user.cpp  user.h
src/utils/: file.cpp  file.h  sha256.cpp  sha256.h  throw.cpp  throw.h  uuid.h
test/: CMakeLists.txt  compile_execute.bat  execute.bat  main.cpp
test/libs/imgui/: imgui.cpp  imgui.h
test/libs/sysma/: sysma.h
test/src/: global.cpp  global.h
test/src/screens/items/: items.cpp  items.h
test/src/screens/login/: login.cpp  login.h
test/src/screens/profile/: profile.cpp  profile.h
test/src/screens/register/: register.cpp  register.h
test/src/window/: window.cpp  window.h
test/src/window/ui/: ui.cpp  ui.h
test/src/window/ui/shared/: popup.cpp  popup.h  popupAlert.cpp  popupAlert.h  popupConfirm.cpp  popupConfirm.h
